network/router/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-public
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # TODO true
spec:
  ingressClassName: public
  rules:
    - host: router.whiskeysierra.myhome-server.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  name: http
  tls:
    - hosts:
        - router.whiskeysierra.myhome-server.de
      secretName: router-whiskeysierra-myhome-server-tls
